use absolute for ad block test div to avoid flickering

--- a/app/styles/banner.scss
+++ b/app/styles/banner.scss
@@ -1,7 +1,10 @@
+.adsbox {
+	position: absolute;
+}
 .bn-ph {
 	position: relative;
 	/*height: $bannerHeight;*/
-	margin-bottom: 1.5 * $defaultPadding;
+	margin-bottom: $defaultPadding;
 	//width: 100%;
 }
 .banner-container {
